15865
In Scala 2.8.1, compiler crashes if an XML statement contains "}: " (unmatched '}').
The space seems to matter. 

Note: with more complexe XML statement than the following, the first two errors are not reported, making the process of finding what cause the compiler crash rather hard. 
```scala
scala> <p>foo}: </p>
<console>:1: error: in XML literal: in XML content, please use '}}' to express '}'
       <p>foo}: </p>
             ^
<console>:1: error:  I encountered a '}' where I didn't expect one, maybe this tag isn't closed <p>
       <p>foo}: </p>
        ^
Exception in thread "main" java.lang.UnsupportedOperationException: Position.point
	at scala.tools.nsc.util.Position$$class.point(Position.scala:88)
	at scala.tools.nsc.util.NoPosition$$.point(Position.scala:193)
	at scala.tools.nsc.util.Position$$class.startOrPoint(Position.scala:85)
	at scala.tools.nsc.util.NoPosition$$.startOrPoint(Position.scala:193)
	at scala.tools.nsc.ast.parser.Parsers$$Parser.expr0(Parsers.scala:1157)
	at scala.tools.nsc.ast.parser.Parsers$$Parser.expr(Parsers.scala:1056)
	at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$templateStatSeq$$1.apply(Parsers.scala:2587)
	at scala.tools.nsc.ast.parser.Parsers$$Parser$$$$anonfun$$templateStatSeq$$1.apply(Parsers.scala:2582)
	at scala.tools.nsc.ast.parser.Parsers$$Parser.checkNoEscapingPlaceholders(Parsers.scala:261)
	at scala.tools.nsc.ast.parser.Parsers$$Parser.templateStatSeq(Parsers.scala:2582)
	at scala.tools.nsc.Interpreter$$$$anonfun$$scala$$tools$$nsc$$Interpreter$$$$parse$$2.simpleParse$$1(Interpreter.scala:485)
	at scala.tools.nsc.Interpreter$$$$anonfun$$scala$$tools$$nsc$$Interpreter$$$$parse$$2.apply(Interpreter.scala:487)
	at scala.tools.nsc.Interpreter$$$$anonfun$$scala$$tools$$nsc$$Interpreter$$$$parse$$2.apply(Interpreter.scala:478)
	at scala.tools.nsc.reporters.Reporter.withIncompleteHandler(Reporter.scala:76)
	at scala.tools.nsc.Interpreter.requestFromLine(Interpreter.scala:541)
	at scala.tools.nsc.Interpreter.interpret(Interpreter.scala:593)
	at scala.tools.nsc.Interpreter.interpret(Interpreter.scala:577)
	at scala.tools.nsc.InterpreterLoop.reallyInterpret$$1(InterpreterLoop.scala:472)
	at scala.tools.nsc.InterpreterLoop.interpretStartingWith(InterpreterLoop.scala:515)
	at scala.tools.nsc.InterpreterLoop.command(InterpreterLoop.scala:362)
	at scala.tools.nsc.InterpreterLoop.processLine$$1(InterpreterLoop.scala:243)
	at scala.tools.nsc.InterpreterLoop.repl(InterpreterLoop.scala:249)
	at scala.tools.nsc.InterpreterLoop.main(InterpreterLoop.scala:559)
	at scala.tools.nsc.MainGenericRunner$$.main(MainGenericRunner.scala:72)
	at scala.tools.nsc.MainGenericRunner.main(MainGenericRunner.scala)
```
